Added refactored method for searching sweets between a price range with a test case also